# eidas-zkvm

./: .gitignore  PIDVCencoded  PIDVCpayload.json  PIDVCpublicKey  PIDVPencoded  README.md
host/: Cargo.toml
host/src/: api.rs  lib.rs  main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guests/age_over_18/: Cargo.toml
methods/guests/age_over_18/src/: main.rs
methods/guests/guest/: Cargo.toml
methods/guests/guest/src/: main.rs
methods/guests/jwt_validator/: Cargo.toml
methods/guests/jwt_validator/src/: main.rs
