[package]
name = "age_over_18"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.3", default-features = false } # no "std" in guest
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "serde"] }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

base64ct = {version = "1.8.0", default-features = false, features = ["alloc"] }