[package]
name = "jwt_validator"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "^3.0.3", default-features = false, features = ['std'] }
jwt-compact = { version = "0.9.0-beta.1", features = ["p256"] }
p256 = { version = "0.13", features = ["ecdsa", "serde"] }
